# Fractalshades

./: .gitignore  CHANGELOG  CHANGELOG.rst  LICENSE  LICENSE.rst  MANIFEST.in  Nova.py  Power_tower.py  README  README.md  TODO  build.sh  classical_mandelbrot.py  dev_notes.txt  fractal.py  index.html  install_from_local-interactive.sh  install_from_local-static.sh  install_from_local.sh  local_install.sh  perturbation.py  pyproject.toml  requirements.txt  run_mandelbrot.py  run_nova.py  run_perturbation_mandelbrot.py  run_power_tower.py  run_tests.py  setup.cfg  setup.py  test_gmp2.py
.github/workflows/: build-windows.yml  build-windows_2.yml  build-windows_310.yml  build-windows_311.yml  build-windows_312.yml  build-windows_38.yml  build-windows_39.yml  doc-deploy.yml  doc-latest.yml  doc-stable.yml  docbuild_dev.yml  python-app.yml  python-package.yml  python-publish.yml  test-linux.yml  test-linux_unique.yml  test-windows.yml  test-windows_unique.yml  test_win.yml
dev/: Nova (copy).py  Power_tower.py  Sin_set.py  blender_test.py  classical_mandelbrot (copy).py  debug_tool_perturbation.py  gui.py  gui_dict_frame.py  mandelbrotN.py  mp_cfg.py  pass_test.py  run_mandelbrot.py  run_mandelbrotN.py  run_mandelbrot_blender.py  run_nova.py  run_perturbation_mandelbrot.py  run_perturbation_mandelbrot2.py  run_power_tower.py  run_power_tower_blender.py  run_sin_set.py  run_tests.py  run_tests_multiproc.py  test_arbitrary_prec.py  test_fixed_ranges.py  test_gui_dict_frame.py  test_multiproc_plot.py  test_order.py  test_png_metadata.py  test_speed.py  test_xrange.py  untitled0.py
docs/: API.rst  acknowledgment.rst  conf.py  doc_util.py  extending.rst  getting_started.rst  index.rst  license.rst  making_movies.rst  math.rst  overview.rst  readme.txt  refs.bib
docs/API/: GUI.rst  arbitrary_models.rst  colors.rst  core.rst  db.rst  layers.rst  logging.rst  models.rst  movie.rst  postproc.rst  projection.rst  settings.rst  standard_models.rst
docs/_static/: rtd_dark.css
docs/_templates/: layout.html  search.html
examples/: README.rst  run_flake.py  run_interactive.py  run_perturb2.py  run_perturb3.py  run_perturbation_mandelbrot.py
examples/batch_mode/: 01-full_basic.py  README.rst  (+43 more)
src/: classical_mandelbrot.py  fractal.py  perturbation.py
tests/: __init__.py  dev_perturbation.py  test_FP_loop.py  test_bivar_SA.py  test_colormap.py  test_colors.py  test_config.py  test_core.py  test_db.py  test_debug_tool.py  test_exp_db.py  test_filters.py  test_interpolate.py  test_layers.py  test_memmap.py  test_mpmath.py  test_mproc.py  test_numba_xr.py  test_parallel.py  test_perturbation.py  test_pickle.py  test_postproc.py  test_subset.py  test_utils.py  test_xrange.py
win_build/: build_requirements.txt  dll2lib.bat  patch_gmpy2.py
(+1336 files in other folders)
