[metadata]
name = fractalshades-G_BILLOTEY
version = attr: fractalshades.__version__
author = Geoffroy Billotey
author_email = geoffroy.billotey@gmail.com
description = Fractal deep-zoom explorer for Mandelbrot fractal - and more to come...
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GBillotey/Fractal-shades
project_urls =
    Bug Tracker = https://github.com/GBillotey/Fractal-shades/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
