[metadata]
name = fractalshades-G_BILLOTEY
version = attr: fractalshades.__version__
author = Geoffroy Billotey
author_email = geoffroy.billotey@gmail.com
description = Fractal deep-zoom explorer package for Mandelbrot fractal - and more to come...
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GBillotey/Fractal-shades
project_urls =
    Bug Tracker = https://github.com/GBillotey/Fractal-shades/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.8
install_requires =
    numpy>=1.19.3
    mpmath>=1.1.0
    gmpy2
    numba>=0.52.0
    Pillow
    PyQt5==5.15.4

package_dir =
    = src
packages = find:
[options.packages.find]
where = src


