[metadata]
name = fractalshades
version = attr: fractalshades.__version__
author = Geoffroy Billotey
author_email = geoffroy.billotey@gmail.com
description = Fractal deep-zoom explorer package for Mandelbrot fractal.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files =
    LICENSE
url = https://github.com/GBillotey/Fractal-shades
project_urls =
    Documentation = https://gbillotey.github.io/Fractalshades/
    Bug Tracker = https://github.com/GBillotey/Fractal-shades/issues
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Topic :: Multimedia :: Graphics
    Topic :: Scientific/Engineering :: Mathematics

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numba>=0.52.0
    mpmath>=1.1.0
    gmpy2
    Pillow
    PyQt5>=5.15.4
    pygments>=2.9.0
    wheel>=0.37.0
    Cython

[options.packages.find]
where = src

[build]
compiler = mingw32

